--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-opencv-python
-numpy
-flask
-requests
+flask==3.0.2
+opencv-python==4.9.0.80
+numpy==1.26.4
+torch==2.2.1
+torchvision==0.17.1
+ultralytics>=8.1.28
